src/objects/zqu__QuoteAmendment__c.object
<CustomObject>
    <description>QuoteAmendment is used to make changes to a Quote.</description>
    <fields>
        <fullName>zqu__AutoRenew__c</fullName>
        <description>Whether the amended subscription is automatically renewed, or expires at the end of the term.</description>
        <inlineHelpText>Whether the amended subscription is automatically renewed, or expires at the end of the term.</inlineHelpText>
        <label>Auto Renew</label>
        <picklist>
            <picklistValues>
                <fullName>true</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>false</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>zqu__CancellationDate__c</fullName>
        <description>Date on which the cancellation is made.</description>
        <inlineHelpText>Date on which the cancellation is made.</inlineHelpText>
        <label>Cancellation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>zqu__CancellationPolicy__c</fullName>
        <description>Determines when the cancellation should take effect.</description>
        <label>Cancellation Policy</label>
        <picklist>
            <picklistValues>
                <fullName>Enter a Date</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>End of Current Term</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>End of Last Invoice Period</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>zqu__ContractEffectiveDate__c</fullName>
        <description>The Contract Effective Date for this Amendment.</description>
        <inlineHelpText>The Contract Effective Date for this Amendment.</inlineHelpText>
        <label>Contract Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>zqu__CustomerAcceptanceDate__c</fullName>
        <description>The Customer Acceptance Date for this Amendment.</description>
        <inlineHelpText>The Customer Acceptance Date for this Amendment.</inlineHelpText>
        <label>Customer Acceptance Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>zqu__DeltaMRR__c</fullName>
        <inlineHelpText>Delta Monthly Recurring Revenue for this amendment</inlineHelpText>
        <label>DeltaMRR</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>zqu__DeltaTCV__c</fullName>
        <inlineHelpText>Delta Total Contract Value for this Amendment</inlineHelpText>
        <label>DeltaTCV</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>zqu__Description__c</fullName>
        <description>As a change log, a part of Amendment</description>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>zqu__IncludeInCreateSubscription__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When sending a new Subscription Order, this product will be included in the Subscription&apos;s initial product set.</description>
        <inlineHelpText>When sending a new Subscription Order, this product will be included in the Subscription&apos;s initial product set.</inlineHelpText>
        <label>Include in Create Subscription</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zqu__InitialTermPeriodType__c</fullName>
        <description>The period type for the current subscription term.</description>
        <inlineHelpText>The option to determine which period type to use for the current term.</inlineHelpText>
        <label>Initial Term Period Type</label>
        <picklist>
            <picklistValues>
                <fullName>Month</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Year</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Day</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Week</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>zqu__InitialTerm__c</fullName>
        <description>The initial term of the amended subscription.</description>
        <inlineHelpText>The initial term of the amended subscription.</inlineHelpText>
        <label>Initial Term</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>zqu__QuoteAmendmentZuoraId__c</fullName>
        <description>corresponding Id on remote zuora server</description>
        <externalId>true</externalId>
        <label>Quote Amendment Zuora Id</label>
        <length>32</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>zqu__Quote__c</fullName>
        <description>The identification for the Quote that is being amended.</description>
        <label>Quote</label>
        <referenceTo>zqu__Quote__c</referenceTo>
        <relationshipLabel>Quote Amendments</relationshipLabel>
        <relationshipName>Quote_Amendments</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>zqu__RenewalSetting__c</fullName>
        <label>Renewal Setting</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zqu__RenewalTermPeriodType__c</fullName>
        <description>The period type for the current renewal term.</description>
        <inlineHelpText>The option to determine which period type to use for the current renewal term.</inlineHelpText>
        <label>Renewal Term Period Type</label>
        <picklist>
            <picklistValues>
                <fullName>Month</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Year</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Day</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Week</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>zqu__RenewalTerm__c</fullName>
        <description>The renewal term of the amended subscription.</description>
        <inlineHelpText>The renewal term of the amended subscription.</inlineHelpText>
        <label>Renewal Term</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>zqu__ServiceActivationDate__c</fullName>
        <description>The Service Activation Date for this Amendment.</description>
        <inlineHelpText>The Service Activation Date for this Amendment.</inlineHelpText>
        <label>Service Activation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>zqu__Status__c</fullName>
        <description>The status of the amendment.
Draft is for when it is going to be pending for a while. Draft is also used temporarily in the code while making changes before making the amendment active. Active is for when it is going to be put into effect immediately. An amendment can be deleted at any point before it becomes active.</description>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Draft</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PendingAcceptance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PendingActivation</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>zqu__TermStartDate__c</fullName>
        <description>The date when the new terms and conditions take effect.</description>
        <inlineHelpText>The date when the new terms and conditions take effect.</inlineHelpText>
        <label>Term Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>zqu__TermType__c</fullName>
        <description>The term type of the amended subscription.</description>
        <inlineHelpText>The term type of the amended subscription.</inlineHelpText>
        <label>Term Type</label>
        <picklist>
            <picklistValues>
                <fullName>Termed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Evergreen</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>zqu__TotalAmount__c</fullName>
        <label>Total Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>zqu__Type__c</fullName>
        <description>The type of amendment that is being made.</description>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Cancellation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NewProduct</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RemoveProduct</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Renewal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TermsAndConditions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UpdateProduct</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NewSubscription</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Quote Amendment</label>
    <listViews>
        <fullName>zqu__All</fullName>
        <columns>OBJECT_ID</columns>
        <columns>NAME</columns>
        <columns>zqu__Type__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>zqu__All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Quote Amendment Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Quote Amendments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>